Makefile clean-up
* ovirt-host-creator/Makefile:
Remove "-" (ignore command failure) prefixes.
Rather than GNU make-specific $(shell command...) syntax,
use more concise Bourne shell syntax, $$(command...).
(X): Simplify definition by using r[2] unconditionally.
(git_head): Define.
(GITRELEASE): Use it (no need to determine branch name).
(RPM_FLAGS): Start body on a separate line, unindented,
to avoid wrapped lines.
* wui/Makefile: Likewise.

--- a/wui/Makefile
+++ b/wui/Makefile
@@ -1,43 +1,44 @@
-VERSION		= $(shell echo `awk '{ print $$1 }' version`)
-NEWVERSION	= $(shell printf "%.2f" `dc -e "$(VERSION) .01 + p"`)
-RELEASE		= $(shell echo `awk '{ print $$2 }' version`)
-NEWRELEASE	= $(shell echo $$(($(RELEASE) + 1)))
-X		= $(shell echo `awk '{ if (split($$2,r,".") >= 2) { if (r[1]=="0") {print r[2]+1} else print 1 } else print 1 }' version`)
-GITRELEASE	= $(shell echo 0.$(X).`date --utc +%Y%m%d%H%M`git`git show-ref --heads --hash=7 $$(git branch|awk '$$1="*" {print $$2}')`)
-DIST		= $(shell rpm --eval '%{dist}')
-ARCH		= $(shell uname -i)
+VERSION		:= $(shell awk '{ print $$1 }' version)
+RELEASE		:= $(shell awk '{ print $$2 }' version)
+NEWVERSION	= $$(awk 'BEGIN { printf "%.2f", $(VERSION) + .01 }')
+NEWRELEASE	= $$(($(RELEASE) + 1))
+X		= $$(awk '{ split($$2,r,"."); \
+                            printf("%d.%d\n", r[1], r[2]+1) }' version)
+git_head	= $$(git show-ref --hash=7 HEAD)
+GITRELEASE	= $(X).$$(date --utc +%Y%m%d%H%M)git$(git_head)
+DIST		= $$(rpm --eval '%{dist}')
+ARCH		:= $(shell uname -i)
 
-SPEC_FILE	= ovirt-wui.spec
 NAME		= ovirt-wui
+SPEC_FILE	= $(NAME).spec
 
 NV		= $(NAME)-$(VERSION)
-RPM_FLAGS	=	--define "_topdir	%(pwd)/rpm-build" \
-			--define "_builddir	%{_topdir}" \
-			--define "_rpmdir	%{_topdir}" \
-			--define "_srcrpmdir	%{_topdir}" \
-			--define '_rpmfilename %%{NAME}-%%{VERSION}-%%{RELEASE}.%%{ARCH}.rpm' \
-			--define "_specdir	%{_topdir}" \
-			--define "_sourcedir	%{_topdir}"
-
-DATADIR		= $(shell rpm --eval "%{_datadir}")
+RPM_FLAGS	= \
+  --define "_topdir	%(pwd)/rpm-build" \
+  --define "_builddir	%{_topdir}" \
+  --define "_rpmdir	%{_topdir}" \
+  --define "_srcrpmdir	%{_topdir}" \
+  --define '_rpmfilename %%{NAME}-%%{VERSION}-%%{RELEASE}.%%{ARCH}.rpm' \
+  --define "_specdir	%{_topdir}" \
+  --define "_sourcedir	%{_topdir}"
 
 all: rpms
 
 bumpgit:
-	-echo "$(VERSION) $(GITRELEASE)" > version
+	echo "$(VERSION) $(GITRELEASE)" > version
 
-bumprelease:	
-	-echo "$(VERSION) $(NEWRELEASE)" > version
-
-setversion: 
-	-echo "$(VERSION) $(RELEASE)" > version
+bumprelease:
+	echo "$(VERSION) $(NEWRELEASE)" > version
 
 bumpversion:
-	-echo "$(NEWVERSION) 0" > version
+	echo "$(NEWVERSION) 0" > version
+
+setversion:
+	echo "$(VERSION) $(RELEASE)" > version
 
 clean:
-	-rm -f ovirt*.gz ovirt*.rpm 
-	-rm -rf ovirt-wui-* dist build
+	rm -f ovirt*.gz ovirt*.rpm
+	rm -rf ovirt-wui-* dist build
 
 genlangs:
 	cd src; rake updatepo; rake makemo
@@ -54,7 +55,7 @@ tar: clean
 
 new-rpms: bumprelease rpms
 
-rpms: tar	
+rpms: tar
 	rpmbuild $(RPM_FLAGS) -ba $(SPEC_FILE)
 
 # convience method to simulate make install, not for production use
