Remove separation between x86_64 and i386 for node and appliance kickstarts
In Fedora 8 we needed to maintain two kickstarts (one for each arch) for
the managed node and the wui appliance since Fedora 8 would install the
i386 versions of RPMs in the x86_64 OS.  Fedora 9 is smarter about this
and only installs the package specific to the arch.  Since the only
difference between the two kickstarts was the removal of specific
i386/i686 packages, this can be simplified.

Signed-off-by: Perry Myers <pmyers@redhat.com>

--- a/ovirt-host-creator/Makefile
+++ b/ovirt-host-creator/Makefile
@@ -10,9 +10,9 @@ distclean: clean
 	rm -rf *.iso tftpboot repos.ks rpm-build iso-file
 
 repos.ks: repos.ks.in
-	cp repos.ks.in repos.ks
+	sed "s/@@ARCH@@/$(ARCH)/" repos.ks.in > repos.ks
 
-build: ovirt-$(ARCH).ks common-install.ks common-pkgs.ks common-post.ks repos.ks
+build: ovirt.ks common-install.ks common-pkgs.ks common-post.ks repos.ks
 	rm -rf tftpboot/
 	./ovirt-pxe.sh > ovirt-pxe.log 2>&1
 
