--- a/wui-appliance/Makefile
+++ b/wui-appliance/Makefile
@@ -1,14 +1,8 @@
 all: ks
 
-primary_src = \
-  wui-devel-x86_64.ks \
-  wui-devel-i386.ks
+ARCH		:= $(shell uname -i)
 
-rel_ks =		\
-  wui-rel-i386.ks	\
-  wui-rel-x86_64.ks
-
-ks: $(rel_ks)
+ks: wui-rel.ks
 
 define ks-flatten
   rm -f $@ $@-t
@@ -17,27 +11,11 @@ define ks-flatten
   mv $@-t $@
 endef
 
-wui-rel-%.ks: wui-devel-%.ks
+wui-rel.ks: wui-devel.ks repos.ks
 	$(ks-flatten)
 
-repos-x86_64.ks: repos-x86_64.ks.in
-	cp repos-x86_64.ks.in repos-x86_64.ks
-
-# Generate each *-i386.ks file from the corresponding -x86_64.ks one.
-%-i386.ks: %-x86_64.ks
-	rm -f $@ $@-t
-	sed 's/x86_64/i386/' $< > $@-t
-	chmod a=r $@-t
-	mv $@-t $@
-
-# Generate dependencies.
-include .deps
-.deps: $(primary_src)
-	rm -f .deps
-	for i in $^; do	\
-	  sed -n '/^%include \(.*\.ks\)$$/s//'"$$i: "'\1/p' $$i >> $@-t; \
-	done
-	mv $@-t $@
+repos.ks: repos.ks.in
+	sed "s/@@ARCH@@/$(ARCH)/" repos.ks.in > repos.ks
 
 clean:
-	rm -f wui-devel-i386.ks repos-i386.ks $(rel_ks) .deps *~
+	rm -f repos.ks wui-rel.ks *~
