Move building of PXE image into RPM build step
Old ovirt-host-image rpm used to store a copy of the ISO and the
tftpboot directory.  This is redundant.  Source file for RPM is now
just the ISO and build step uses ovirt-pxe script to build the tftpboot
directory from the ISO

ovirt-pxe, ovirt-flash and ovirt-flash-static are now all part
of the ISO RPM so that users can easily deploy the ISO image onto
these media types.

Signed-off-by: Perry Myers <pmyers@redhat.com>

--- a/ovirt-host-creator/Makefile
+++ b/ovirt-host-creator/Makefile
@@ -4,22 +4,21 @@ all: rpms
 include ../common/release.mk
 
 clean:
-	rm -rf ovirt-host-image-* ovirt-pxe.log
+	rm -rf ovirt-host-image-* ovirt-cd.log
 
 distclean: clean
-	rm -rf *.iso tftpboot repos.ks rpm-build iso-file
+	rm -rf *.iso repos.ks rpm-build iso-file
 
 repos.ks: repos.ks.in
 	sed "s/@@ARCH@@/$(ARCH)/" repos.ks.in > repos.ks
 
 build: ovirt.ks common-install.ks common-pkgs.ks common-post.ks repos.ks
-	rm -rf tftpboot/
-	./ovirt-pxe.sh > ovirt-pxe.log 2>&1
+	./ovirt-cd > ovirt-cd.log 2>&1
 
 tar: clean build
 	mv $$(cat iso-file) ovirt.iso
 	mkdir -p $(NV)
-	cp -a ovirt-host-image.spec ovirt.iso tftpboot/* $(NV)
+	cp -a ovirt-host-image.spec ovirt-pxe ovirt-flash ovirt-flash-static ovirt.iso $(NV)
 	mkdir -p rpm-build
 	tar zcvf rpm-build/$(NV).tar $(NV)
 	cp version rpm-build/
