--- a/wui/src/test/fixtures/hosts.yml
+++ b/wui/src/test/fixtures/hosts.yml
@@ -30,7 +30,7 @@ three:
   memory: 2048
   is_disabled: 0 
   hypervisor_type: 'kvm'
-  hardware_pool_id: 2
+  hardware_pool_id: 3
 four:
   id: 4
   uuid: '520bbb34-6515-490e-9d07-0c8b14f76805'
@@ -41,7 +41,7 @@ four:
   memory: 2048
   is_disabled: 1 
   hypervisor_type: 'kvm'
-  hardware_pool_id: 2
+  hardware_pool_id: 3
 five:
   id: 5
   uuid: '2e422f66-324e-48d4-973f-0b91b33070f9'
@@ -49,10 +49,10 @@ five:
   num_cpus: 32
   cpu_speed: 4096
   arch: 'xeon'
-  memory: 16384
+  memory: 1048576
   is_disabled: 0 
   hypervisor_type: 'kvm'
-  hardware_pool_id: 2
+  hardware_pool_id: 3
 six:
   id: 6
   uuid: 'bb0ce7c7-f234-49ae-84b5-6f4fd8bddcaa'
@@ -63,7 +63,7 @@ six:
   memory: 16384
   is_disabled: 0 
   hypervisor_type: 'kvm'
-  hardware_pool_id: 2
+  hardware_pool_id: 3
 seven:
   id: 7
   uuid: '6ae3d22e-97e0-4d86-9712-5395b20a0f45'
