Add additional blacklisting and rpm removal to managed node
A few important notes:
1. /lib/modules was scoured for things that didn't seem necessary, however
   my notion of not necessary may not be correct.  Please review the list
   of modules that I'm removing and if you see one that we need to add back
   in, comment.
2. /boot is removed as we don't need an initrd and kernel image inside of
   the livecd initrd.
3. The blacklisting method is a hack.  What we need is an appliance creator
   that has black/whitelisting capabilities...  (hint, hint to our AOS
   friends out there)

NOTE: This patch is revised from my patch last week.  I incorporated
suggestions from Chris regarding reinclusion of some kernel modules and
fixed an issue with i386 builds by not wiping out /lib/security.  With
this patch both i386 and x86_64 managed nodes boot and work.

Signed-off-by: Perry Myers <pmyers@redhat.com>

- use lib{,64} in the blacklist
- drop copying /etc/timezone, fixed in livecd-tools >= 0.17.1
  check for RPM version in Makefile

Signed-off-by: Alan Pevec <apevec@redhat.com>

--- a/ovirt-host-creator/Makefile
+++ b/ovirt-host-creator/Makefile
@@ -13,6 +13,7 @@ repos.ks: repos.ks.in
 	sed "s/@@ARCH@@/$(ARCH)/" repos.ks.in > repos.ks
 
 build: ovirt.ks common-install.ks common-pkgs.ks common-post.ks repos.ks
+	./rpm-compare.py GE 0 livecd-tools 017.1 1
 	./ovirt-cd > ovirt-cd.log 2>&1
 
 tar: clean build
