Refactored ovirt-identify, and added NIC info during the identify phase.
The identify phase now gathers the details for each physical NIC on the
managed node and submits that back to the server along with the CPU
details.

The code is now broken out into several source modules to make the code
easier to maintain. The source files include:
 * comm.c        - code for establishing a connection with the server
 * debug.c       - code for displaying debug information
 * gather.c      - code for collecting the various hardware details
 * hal_support.c - code for working with HAL
 * main.c        - main entry point and variable declarations.
 * protocol.c    - code to handle data exchange with the server

--- a/ovirt-managed-node/src/Makefile
+++ b/ovirt-managed-node/src/Makefile
@@ -17,9 +17,9 @@
 # also available at http://www.gnu.org/copyleft/gpl.html.
 
 CC=gcc
-CFLAGS=-Wall -c -g
-LFLAGS=-lvirt
-OBJECTS=ovirt-identify-node.o
+CFLAGS=-Wall -c -g $(shell pkg-config --cflags dbus-1)
+LFLAGS=-lhal -lvirt
+OBJECTS=comm.o gather.o hal_support.o main.o protocol.o
 TARGET=ovirt-identify-node
 SOURCES=\
 	ovirt-identify-node.c
