use guest's UUID to log collectd data
to track the same guest across migrations

Signed-off-by: Alan Pevec <apevec@redhat.com>

--- a/ovirt-managed-node/src/scripts/collectd.conf.in
+++ b/ovirt-managed-node/src/scripts/collectd.conf.in
@@ -10,7 +10,7 @@ LoadPlugin disk
 <Plugin libvirt>
         Connection "qemu:///system"
         RefreshInterval "10"
-        HostnameFormat "hostname"
+        HostnameFormat "uuid"
 </Plugin>
 
 <Plugin network>
