make sure cfgdb wins over Proxy directive

--- a/wui/conf/ovirt-wui.conf
+++ b/wui/conf/ovirt-wui.conf
@@ -41,6 +41,9 @@ ProxyPassReverse /ovirt/images !
 ProxyPassReverse /ovirt/stylesheets !
 ProxyPassReverse /ovirt/errors !
 
+ProxyPass /ovirt/cfgdb !
+ProxyPassReverse /ovirt/cfgdb !
 # XXX default configuration db, all hosts get the same config
+RewriteEngine on
 RewriteRule   ^/ovirt/cfgdb  /var/www/html/ovirt-cfgdb
 </VirtualHost>
