--- a/ovirt-host-creator/repos.ks.in
+++ b/ovirt-host-creator/repos.ks.in
@@ -1,3 +1,3 @@
-repo --name=f9 --mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-9&arch=@@ARCH@@
-repo --name=f9-updates --mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f9&arch=@@ARCH@@
-repo --name=ovirt --baseurl=http://ovirt.org/repos/ovirt/9/@@ARCH@@
+repo --name=f9 --mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-9&arch=$basearch
+repo --name=f9-updates --mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f9&arch=$basearch
+repo --name=ovirt --baseurl=http://ovirt.org/repos/ovirt/9/$basearch
