--- a/wui-appliance/Makefile
+++ b/wui-appliance/Makefile
@@ -1,21 +1,25 @@
-all: ks
+NAME=ovirt-appliance
+YUMCACHE=$$(pwd)/../tmp/cache
 
-ARCH		:= $(shell uname -i)
+appliance: $(NAME)-sda.raw
 
-ks: wui-rel.ks
+appliance-compressed: $(NAME)-sda.qcow
 
-define ks-flatten
-  rm -f $@ $@-t
-  ksflatten $< > $@-t
-  chmod a=r $@-t
-  mv $@-t $@
-endef
+$(NAME)-sda.raw: wui-devel.ks common-install.ks common-pkgs.ks common-post.ks repos.ks
+	appliance-creator --config wui-devel.ks --name $(NAME) \
+	  --tmpdir=$$(pwd)/tmp --cache=$(YUMCACHE)
 
-wui-rel.ks: wui-devel.ks repos.ks
-	$(ks-flatten)
+$(NAME)-sda.qcow: $(NAME)-sda.raw
+	# FIXME add --compress option to appliance-creator
+	qemu-img convert -c $(NAME)-sda.raw -O qcow2 $(NAME)-sda.qcow
 
 repos.ks: repos.ks.in
-	sed "s/@@ARCH@@/$(ARCH)/" repos.ks.in > repos.ks
+	cp repos.ks.in repos.ks
 
 clean:
-	rm -f repos.ks wui-rel.ks *~
+	rm -f repos.ks
+
+distclean: clean
+	rm -rf $(NAME)-sda.raw $(NAME)-sda.qcow
+
+.PHONY: appliance appliance-compressed clean distclean
