protect against shell meta-characters in working directory name

--- a/ovirt-host-creator/Makefile
+++ b/ovirt-host-creator/Makefile
@@ -18,7 +18,7 @@ ovirt.iso: ovirt.ks common-install.ks common-pkgs.ks common-post.ks repos.ks
 	../common/rpm-compare.py GE 0 livecd-tools 017.1 1
 	mkdir -p tmp
 	livecd-creator --skip-minimize -c ovirt.ks -f ovirt \
-	  --tmpdir=$$(pwd)/tmp --cache=$(YUMCACHE)
+	  --tmpdir="$$(pwd)/tmp" --cache="$(YUMCACHE)"
 
 tar: clean ovirt.iso
 	mkdir -p $(NV)
