--- a/wui-appliance/Makefile
+++ b/wui-appliance/Makefile
@@ -8,7 +8,7 @@ appliance-compressed: $(NAME)-sda.qcow
 $(NAME)-sda.raw: wui-devel.ks common-install.ks common-pkgs.ks common-post.ks repos.ks
 	mkdir -p tmp
 	appliance-creator --config wui-devel.ks --name $(NAME) \
-	  --tmpdir=$$(pwd)/tmp --cache=$(YUMCACHE)
+	  --tmpdir="$$(pwd)/tmp" --cache="$(YUMCACHE)"
 
 $(NAME)-sda.qcow: $(NAME)-sda.raw
 	# FIXME add --compress option to appliance-creator
