configure Cobbler instance in oVirt appliance
Minimal Fedora install tree is imported into the image during appliance
creation, at appliance firstboot Cobbler distro and profiles are created,
using non-mirrored repositories to save appliance disk space and setup time.

Cobbler entries for each "fake" oVirt Node in developer setup is added
if you add more oVirt Nodes, define them as Cobbler system:
  cobbler system add --name=NodeName --profile=oVirt-Node-x86_64 \
    --mac=00:11:22:33:44:55 --netboot-enabled=1
otherwise they will PXE boot to the default Cobbler boot menu, where
oVirt Node can be manually choosen

Signed-off-by: Alan Pevec <apevec@redhat.com>

--- a/wui-appliance/Makefile
+++ b/wui-appliance/Makefile
@@ -1,11 +1,13 @@
 NAME=ovirt-appliance
 YUMCACHE=$$(pwd)/../tmp/cache
+F_REL := $(shell rpm -q --qf '%{VERSION}' fedora-release)
+ARCH  := $(shell uname -i)
 
 appliance: $(NAME)-sda.raw
 
 appliance-compressed: $(NAME)-sda.qcow
 
-$(NAME)-sda.raw: wui-devel.ks common-install.ks common-pkgs.ks common-post.ks repos.ks
+$(NAME)-sda.raw: *.ks tmp/tree/.treeinfo
 	mkdir -p tmp
 	appliance-creator --config wui-devel.ks --name $(NAME) \
 	  --tmpdir="$$(pwd)/tmp" --cache="$(YUMCACHE)"
@@ -16,6 +18,11 @@ $(NAME)-sda.qcow: $(NAME)-sda.raw
 
 repos.ks: ../common/repos.ks.in
 	cp ../common/repos.ks.in repos.ks
+
+tmp/tree/.treeinfo:
+	mkdir -p tmp/tree
+	cd tmp/tree; ../../gettree.sh \
+	  http://download.fedoraproject.org/pub/fedora/linux/releases/$(F_REL)/Fedora/$(ARCH)/os
 
 clean:
 	rm -f repos.ks
