Fixed build-all to use make clean now for subdirs instead of distclean
distclean removes tmp dirs which cache downloaded images, so clean
is used from the build script so that these are not redownloaded
with each build

Signed-off-by: Perry Myers <pmyers@redhat.com>

--- a/ovirt-host-creator/Makefile
+++ b/ovirt-host-creator/Makefile
@@ -6,10 +6,10 @@ all: rpms
 include ../common/release.mk
 
 clean:
-	rm -rf ovirt-host-image-* ovirt-cd.log
+	rm -rf ovirt-host-image-* ovirt-cd.log *.iso
 
 distclean: clean
-	rm -rf *.iso repos.ks rpm-build
+	rm -rf repos.ks rpm-build
 
 repos.ks: ../common/repos.ks.in
 	cp ../common/repos.ks.in repos.ks
